fix header spacing

--- a/frontend/src/styles/credits.css
+++ b/frontend/src/styles/credits.css
@@ -3,7 +3,6 @@
   top: .5em;
   left: .5em;
   height: 5em;
-  padding-bottom: 1em;
   width: 10em;
 }
 
@@ -75,11 +74,12 @@ span {
   .credits-area {
     top: auto;
     left: auto;
-    bottom: -1em;
-    right: 1em;
+    bottom: -0.5em;
+    right: 0.5em;
   }
 
   .about-options {
-    margin-top: -11em;
+    /* margin-top: 11em;
+    z-index: 1; */
   }
 }
