--- a/frontend/src/styles/tooltip.css
+++ b/frontend/src/styles/tooltip.css
@@ -93,5 +93,7 @@
 }
 
 @media screen and (max-width: 800px) {
-
+  .tooltip {
+    width: 80vw;
+  }
 }
