--- a/frontend/src/styles/words.css
+++ b/frontend/src/styles/words.css
@@ -4,12 +4,14 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position: relative;
 }
 
 .words {
   display: flex;
   flex-wrap: wrap;
   width: 80%;
+  position: relative;
 }
 
 .word {
@@ -40,10 +42,13 @@
   .words {
     flex-wrap: nowrap;
     overflow-x: scroll;
+    overflow-y: visible;
     border-radius: 5px;
+    height: 30em;
   }
 
   .word {
-    width: max-content;
+    width: 100%;
+    
   }
 }
